[gd_scene load_steps=19 format=3 uid="uid://c54ljjqgpci6"]

[ext_resource type="Script" path="res://resource/Script/Ecosystem.gd" id="1_fni7g"]
[ext_resource type="Texture2D" uid="uid://ctg01iym2i7sv" path="res://resource/Art/Background/sunny.png" id="2_v8ulh"]
[ext_resource type="Texture2D" uid="uid://c3cn510gsivjr" path="res://resource/Art/Background/background.png" id="3_r3g6u"]
[ext_resource type="Texture2D" uid="uid://cxs8cj7h2428w" path="res://resource/Art/Background/tank.png" id="4_jedip"]
[ext_resource type="Texture2D" uid="uid://bbs377ceqvg4w" path="res://resource/Art/UI/misting.png" id="5_dec5c"]
[ext_resource type="Texture2D" uid="uid://b2br6q1v6ysn6" path="res://resource/sprites/Background/diary.jpg" id="5_gkvho"]
[ext_resource type="Texture2D" uid="uid://dqo0jlu77g7mj" path="res://resource/Art/UI/plantbox.png" id="5_w3dfj"]
[ext_resource type="Texture2D" uid="uid://db4f3ecl6equk" path="res://resource/Art/UI/curtain.png" id="6_7vwkj"]
[ext_resource type="Texture2D" uid="uid://dcokxb005c73t" path="res://resource/Art/UI/bugbox.png" id="7_s1ot5"]
[ext_resource type="Texture2D" uid="uid://mo4glt3t4xnm" path="res://resource/Art/UI/frogbox.png" id="8_0d2kn"]
[ext_resource type="Texture2D" uid="uid://dp15r1fj81pxl" path="res://resource/Art/UI/temperature1.png" id="9_xxx4e"]
[ext_resource type="Texture2D" uid="uid://dbvp1jfqwpt76" path="res://resource/Art/date/day1.png" id="10_s4nxl"]
[ext_resource type="Texture2D" uid="uid://dy6wglxdy3lqf" path="res://resource/Art/UI/population1.png" id="11_tikno"]
[ext_resource type="Texture2D" uid="uid://bqklmcnxchtyy" path="res://resource/Art/UI/humility.png" id="12_p0vol"]
[ext_resource type="Texture2D" uid="uid://dp0cw5nurh7ml" path="res://resource/Art/date/nextday.png" id="13_2f2w0"]
[ext_resource type="Texture2D" uid="uid://64ssdo6ghwqp" path="res://resource/Art/UI/actionpoint.png" id="14_m42ou"]
[ext_resource type="Texture2D" uid="uid://e5fe2rnlw052" path="res://resource/Art/UI/todo.png" id="15_xkqt4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rel1o"]
bg_color = Color(0.980392, 0.980392, 0.980392, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.666667, 0.666667, 0.666667, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="Ecosystem" type="Node2D"]
scale = Vector2(1.11432, 1.01086)
script = ExtResource("1_fni7g")

[node name="Weather" type="Sprite2D" parent="."]
position = Vector2(572.546, 397.681)
scale = Vector2(0.382894, 0.472358)
texture = ExtResource("2_v8ulh")

[node name="Table" type="Sprite2D" parent="."]
position = Vector2(574.341, 396.445)
scale = Vector2(0.383493, 0.470893)
texture = ExtResource("3_r3g6u")

[node name="Bottle" type="Sprite2D" parent="."]
position = Vector2(566.713, 402.133)
scale = Vector2(0.377809, 0.46474)
texture = ExtResource("4_jedip")

[node name="MistingSystemButton" type="Button" parent="."]
offset_left = 1027.53
offset_top = 498.585
offset_right = 1096.53
offset_bottom = 542.585
text = "Misting"

[node name="Sprite2D" type="Sprite2D" parent="MistingSystemButton"]
position = Vector2(37.6913, 10.8818)
scale = Vector2(0.378723, 0.385839)
texture = ExtResource("5_dec5c")

[node name="OpenCurtainsButton" type="Button" parent="."]
offset_left = 457.678
offset_top = -0.989254
offset_right = 1117.68
offset_bottom = 101.011
text = "Curtain"

[node name="Sprite2D" type="Sprite2D" parent="OpenCurtainsButton"]
position = Vector2(343.707, 54.4091)
scale = Vector2(0.422777, 0.28563)
texture = ExtResource("6_7vwkj")

[node name="PlantButton" type="Button" parent="."]
offset_left = 823.821
offset_top = 640.049
offset_right = 948.821
offset_bottom = 709.049
text = "Plant"

[node name="Sprite2D" type="Sprite2D" parent="PlantButton"]
position = Vector2(87.0486, 11.9863)
scale = Vector2(0.406581, 0.477162)
texture = ExtResource("5_w3dfj")

[node name="BugButton" type="Button" parent="."]
offset_left = 883.05
offset_top = 548.048
offset_right = 940.05
offset_bottom = 581.048

[node name="Sprite2D" type="Sprite2D" parent="BugButton"]
position = Vector2(28.7996, 8.3847)
scale = Vector2(0.404837, 0.454378)
texture = ExtResource("7_s1ot5")

[node name="FrogButton" type="Button" parent="."]
offset_left = 869.589
offset_top = 470.886
offset_right = 947.589
offset_bottom = 524.886

[node name="Sprite2D" type="Sprite2D" parent="FrogButton"]
position = Vector2(44.8704, 19.7852)
scale = Vector2(0.372374, 0.43417)
texture = ExtResource("8_0d2kn")

[node name="TemperatureLabel" type="Label" parent="."]
offset_left = 128.329
offset_top = 454.069
offset_right = 257.329
offset_bottom = 480.069
theme_override_colors/font_color = Color(0.0980392, 0.0745098, 0.0745098, 1)
text = "Temperature: 25"

[node name="Sprite2D" type="Sprite2D" parent="TemperatureLabel"]
position = Vector2(-42.1843, 13.4841)
scale = Vector2(0.422847, 0.453816)
texture = ExtResource("9_xxx4e")

[node name="DaysLabel" type="Label" parent="."]
offset_left = 296.145
offset_top = 79.1405
offset_right = 436.145
offset_bottom = 120.141
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = " 0"

[node name="Sprite2D" type="Sprite2D" parent="DaysLabel"]
position = Vector2(-26.4438, 15.0116)
scale = Vector2(0.295726, 0.286794)
texture = ExtResource("10_s4nxl")

[node name="CreatureCountLabel" type="Label" parent="."]
offset_left = 124.74
offset_top = 553.984
offset_right = 277.739
offset_bottom = 579.984
theme_override_colors/font_color = Color(0.172549, 0.109804, 0.109804, 1)
text = "Creature Count: 0"

[node name="Sprite2D" type="Sprite2D" parent="CreatureCountLabel"]
position = Vector2(-41.2808, 11.8711)
scale = Vector2(0.423363, 0.48488)
texture = ExtResource("11_tikno")

[node name="HumidityProgressBar" type="ProgressBar" parent="."]
offset_left = 104.997
offset_top = 361.079
offset_right = 258.997
offset_bottom = 388.079

[node name="Sprite2D" type="Sprite2D" parent="HumidityProgressBar"]
position = Vector2(-13.4612, 11.8711)
scale = Vector2(0.411904, 0.453758)
texture = ExtResource("12_p0vol")

[node name="NextDayButton" type="Button" parent="."]
offset_left = 1026.64
offset_top = 625.21
offset_right = 1110.64
offset_bottom = 673.21
text = "Next"

[node name="Sprite2D" type="Sprite2D" parent="NextDayButton"]
position = Vector2(46.6653, 17.8066)
scale = Vector2(0.268844, 0.351125)
texture = ExtResource("13_2f2w0")

[node name="Action_pointsLabel" type="Label" parent="."]
offset_left = 221.66
offset_top = 622.242
offset_right = 388.66
offset_bottom = 667.242
theme_override_colors/font_color = Color(0.0784314, 0.0352941, 0.0352941, 1)
text = ": 3"

[node name="Sprite2D" type="Sprite2D" parent="Action_pointsLabel"]
position = Vector2(-87.4913, 13.9846)
scale = Vector2(0.346798, 0.371649)
texture = ExtResource("14_m42ou")

[node name="PlantPanel" type="Panel" parent="."]
visible = false
offset_left = 812.154
offset_top = 498.585
offset_right = 961.154
offset_bottom = 641.585

[node name="flower" type="Button" parent="PlantPanel"]
layout_mode = 0
offset_left = 16.0
offset_top = 11.0
offset_right = 71.0
offset_bottom = 69.0
text = "flower"

[node name="bush" type="Button" parent="PlantPanel"]
layout_mode = 0
offset_left = 81.0
offset_top = 12.0
offset_right = 136.0
offset_bottom = 70.0
text = "bush"

[node name="plant1" type="Button" parent="PlantPanel"]
layout_mode = 0
offset_left = 17.0507
offset_top = 79.1405
offset_right = 75.0507
offset_bottom = 131.141
text = "plant1"

[node name="GuidePanel" type="Panel" parent="."]
visible = false
offset_top = -4.0
offset_right = 1149.0
offset_bottom = 788.0

[node name="TextEdit" type="TextEdit" parent="GuidePanel"]
layout_mode = 0
offset_left = 174.995
offset_top = 173.163
offset_right = 940.995
offset_bottom = 535.163
text = "At the beginning of the story: "

[node name="Continue" type="Button" parent="GuidePanel"]
layout_mode = 0
offset_left = 507.933
offset_top = 478.843
offset_right = 586.933
offset_bottom = 517.843
text = "Continue"

[node name="Panel" type="Panel" parent="."]
offset_left = 89.7408
offset_top = 126.625
offset_right = 340.741
offset_bottom = 282.625

[node name="CheckBox" type="CheckBox" parent="Panel"]
layout_mode = 0
offset_left = 9.87149
offset_top = 13.8496
offset_right = 241.871
offset_bottom = 59.8496
button_mask = 0
text = "Count: 6"

[node name="CheckBox2" type="CheckBox" parent="Panel"]
layout_mode = 0
offset_left = 9.87149
offset_top = 61.3339
offset_right = 233.871
offset_bottom = 92.3339
button_mask = 0
text = "Best Temp: 20 - 30"

[node name="CheckBox3" type="CheckBox" parent="Panel"]
layout_mode = 0
offset_left = 8.97409
offset_top = 99.9149
offset_right = 241.974
offset_bottom = 123.915
button_mask = 0
text = "Best Humid: 70 - 90"

[node name="Sprite2D" type="Sprite2D" parent="Panel"]
position = Vector2(78.0745, -35.6133)
scale = Vector2(0.349623, 0.386648)
texture = ExtResource("15_xkqt4")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
position = Vector2(573.444, 400.649)
scale = Vector2(4.44893, 4.1304)
texture = ExtResource("5_gkvho")

[node name="Label" type="Label" parent="Sprite2D"]
offset_left = -92.183
offset_top = -58.2
offset_right = -52.183
offset_bottom = -35.2
theme_override_font_sizes/font_size = 10
text = "Ecosystem Diary"

[node name="Day" type="Label" parent="Sprite2D"]
offset_left = -91.5779
offset_top = -34.4889
offset_right = -43.5779
offset_bottom = -8.4889
theme_override_font_sizes/font_size = 8
text = "Day: 0"

[node name="Button" type="Button" parent="Sprite2D"]
offset_left = 82.5008
offset_top = 52.6914
offset_right = 105.501
offset_bottom = 69.6914
theme_override_font_sizes/font_size = 6
text = "end"

[node name="Panel2" type="Panel" parent="."]
visible = false
offset_left = 431.0
offset_top = 133.0
offset_right = 643.0
offset_bottom = 242.0
theme_override_styles/panel = SubResource("StyleBoxFlat_rel1o")

[connection signal="pressed" from="MistingSystemButton" to="." method="_on_misting_system_button_pressed"]
[connection signal="pressed" from="OpenCurtainsButton" to="." method="_on_open_curtains_button_pressed"]
[connection signal="pressed" from="PlantButton" to="." method="_on_plant_button_pressed"]
[connection signal="ready" from="TemperatureLabel" to="." method="_on_temperature_label_ready"]
[connection signal="ready" from="DaysLabel" to="." method="_on_days_label_ready"]
[connection signal="ready" from="CreatureCountLabel" to="." method="_on_creature_count_label_ready"]
[connection signal="ready" from="HumidityProgressBar" to="." method="_on_humidity_progress_bar_ready"]
[connection signal="pressed" from="NextDayButton" to="." method="_on_next_day_button_pressed"]
[connection signal="ready" from="Action_pointsLabel" to="." method="_on_action_points_label_ready"]
[connection signal="pressed" from="PlantPanel/flower" to="." method="_on_flower_pressed"]
[connection signal="pressed" from="PlantPanel/bush" to="." method="_on_bush_pressed"]
[connection signal="pressed" from="PlantPanel/plant1" to="." method="_on_plant_1_pressed"]
[connection signal="pressed" from="GuidePanel/Continue" to="." method="_on_continue_pressed"]
[connection signal="ready" from="Panel/CheckBox" to="." method="_on_check_box_ready"]
[connection signal="ready" from="Panel/CheckBox2" to="." method="_on_check_box_2_ready"]
[connection signal="ready" from="Panel/CheckBox3" to="." method="_on_check_box_3_ready"]
[connection signal="ready" from="Sprite2D/Day" to="." method="_on_day_ready"]
[connection signal="pressed" from="Sprite2D/Button" to="." method="_on_button_pressed"]
